--- a/templates/song-content.html
+++ b/templates/song-content.html
@@ -98,7 +98,7 @@
         danceability : 
 
         {% if profile.danceability %}
-            {{ profile.danceability|to_percent }}
+            {{ profile.danceability }}
         {% endif %}
     </div>
 
@@ -106,7 +106,7 @@
         liveness : 
 
         {% if profile.liveness %}
-            {{ profile.liveness|to_percent }}
+            {{ profile.liveness }}
         {% endif %}
     </div>
 
@@ -114,7 +114,7 @@
         tempo : 
         
         {% if profile.tempo %}
-            {{ profile.tempo }} bpm
+            {{ profile.tempo }}
         {% endif %}
     </div>
     
@@ -197,10 +197,16 @@
 
 {% for pending in pending_content %}
     <script type="text/javascript">
-        setTimeout(
-            dispatch("{{ resource_id|safe }}", "{{ resource_name }}", "{{ pending }}", "{{ use_generic_key }}", 0, "{{ page }}")
-            , 1500
-        );
+        var opts = {
+            'resource_id': "{{ resource_id|safe }}",
+            'resource_name': "{{ resource_name }}",
+            'content_key': "{{ pending }}",
+            'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
+            'page': "{{ page }}",
+            'item_count': "{{ item_count }}"
+        };
+
+        setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
     </script>
 {% endfor %}
 
