--- a/templates/artist-summary.html
+++ b/templates/artist-summary.html
@@ -179,15 +179,17 @@
 {% for pending in pending_content %}
     <script type="text/javascript">
         var opts = {
-            'resource_id': "{{ resource_id|safe }}",
-            'resource_name': "{{ resource_name }}",
-            'content_key': "{{ pending }}",
-            'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
-            'page': "{{ page }}",
-            'item_count': "{{ item_count }}"
-        };
+                'resource_id': "{{ resource_id|safe }}",
+                'resource_name': "{{ resource_name|safe }}",
+                'content_key': "{{ pending }}",
+                'page': "{{ page }}",
+                'item_count': "{{ item_count }}",
+                'attempt': 0
+            },
+            use_generic_key = {{ use_generic_key|yesno:"true,false" }};
 
-        setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
+
+        setTimeout(dispatch(opts, use_generic_key), AJAX_INITIAL_SNOOZE);
     </script>
 {% endfor %}
 
