--- a/static/css/general.css
+++ b/static/css/general.css
@@ -1,38 +1,105 @@
-.title {
-    font-size: 30px;
-}
-
-.subtitle {
-    font-size: 20px;
-}
-
-.header {
-    text-align: center;
-}
-
-a {
-    color: red;
-    /*color: #81A8B8;*/
-    text-decoration: none;
-}
-a:hover {
-    color: red;
-    /*color: #A4BCC2;*/
-}
-a:visited {
-    color: red;
-    /*color: #81A8B8;*/
-}
-a:active {
-    
-}
-
-.click-div {
-    background-image: url('empty.gif');
+html, body {
+    /*font-family: Helvetica, sans-serif;*/
+    background: none repeat scroll 0 0 #5A5A5A;
+    font-family: Liberation Sans;
+    font-size: 18px;
     height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
+    margin: 0;
+    padding: 0;
     width: 100%;
-    z-index: 1;
+}
+
+hr {
+    width: 970px;
+}
+
+
+
+/*
+    POSITIONING
+*/
+.center {
+    margin: auto;
+    position: relative;
+    width: 970px;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
+
+
+
+/*
+    LISTS
+*/
+ul, ol {
+    width: 100%;
+    height: 100%;
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+}
+li {
+    margin: 0;
+    padding: 0 30px 0 0;
+}
+
+
+/*
+    LINKS
+*/
+a {
+    color: inherit;
+    text-decoration: none;
+    font-style: bold;
+}
+
+
+a:hover {
+    color: gray;
+}
+
+
+/*
+    TABLES
+*/
+.container-table {
+    background: none repeat scroll 0 0 #272727;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.6) inset;
+    padding: 5px;
+    margin: 0;
+}
+.container-table .header {
+    width: 100%;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0 15px 0;
+}
+.container-table .header .left {
+    padding-left: 15px;
+}
+.container-table .header .right {
+    padding-right: 15px;
+}
+table {
+    background: none repeat scroll 0 0 #272727;
+    border: 2px solid #272727;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    line-height: 220%;
+}
+tbody:first-child td:first-child { 
+    padding: 0 15px;
+    width: 20px;
+}
+.even {
+    background-color: #5A5A5A;
+}
+.odd {
+    background-color: #3F3F3F;
 }
