--- a/templates/song-summary.html
+++ b/templates/song-summary.html
@@ -17,9 +17,9 @@
 
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    
-    <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/nav.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/OLDgeneral.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/OLDgrid.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/OLDnav.css" rel="stylesheet">
 
     <title>audiosearch</title>
 </head>
