--- a/templates/artist-content.html
+++ b/templates/artist-content.html
@@ -3,210 +3,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!--Google analytics-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-51583732-1', 'audiosearch.net');
-      ga('send', 'pageview');
-
-    </script><!--END analytics-->
-
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-   
-    <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/nav.css" rel="stylesheet">
-   
-    <title>audiosearch</title>
+    {% include "general_HTML_HEAD.html" %}
 </head>
+
 <body>
 
-<!-- header -->
-<div id="container-header">
-    <div id="page-nav" class="center">
-        <ul>
-            <!-- LEFT -->
-            <li>
-                <a href="/">audiosearch</a>
-            </li>
-
-            <li>
-                /
-            </li>
-
-            <li>
-                <a href="/music">music</a>
-            </li>
-
-            <li>
-                /
-            </li>
-
-            <li>
-                <a href="/about">about</a>
-            </li>
-
-            <li>
-                /
-            </li>
-
-            <li>
-                <form action="/search/" method="GET">
-                    <input id="search-bar" type="text" name="q">
-                </form>
-            </li>
-
-            {% if debug %}
-                <li float="right">
-                    <a href="" id="clear">clear</a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-</div><!--END header -->
-
-
-
-
-<!-- dir -->
-<div class="dir content">
-    <span class="title">
-        artist / 
-
-        <a href="/music/{{ resource_name|space_to_plus }}/">
-            {{ resource_name }}
-        </a>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/recommended/">
-            Recommended Songs
-        </a>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/similar/">
-            Similar Artists
-        </a>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ resource_name|space_to_plus }}/songs/">
-            Songs
-        </a>
-    </span>
-    
-</div><!--END dir -->
-
-<hr>
-
-<!-- artist info -->
-<div class="artist-info content">
-    <div id="profile-location">
-        {{ profile.location }}
-    </div>
-
-    <div id="profile-genres">
-        {% for genre in profile.genres %}
-            {{ genre }}
-        {% endfor %}
-    </div>
-</div><!--END artist info -->
-
-<hr>
-
-<!-- table nav -->
-<div class="table-nav content">
-    <div class="title">
-        {{ description }}
-    </div>
-
-    <div id="next">
-        {% if content.next %}
-            <a href = "?page={{ content.next }}" >next</a>
-        {% endif %}
-    </div>
-
-    <div id="current">
-        {% if content.next or content.previous and content.current %}
-            {{ content.current }} of {{ content.total }}
-        {% endif %}
-    </div>
-
-    <div id="previous">
-        {% if content.previous %}
-            <a href = "?page={{ content.previous }}" >previous</a>
-        {% endif %}
-    </div>
-
-</div><!--END table nav -->
-
-<hr>
+{% include "general_HEADER.html" %}
 
 <!-- content -->
-<div class="content">
-    <table id="content-table">
-        <tbody id="content-tbody">
-            {% for item in content.data %}
-                <tr class="{% cycle 'even' 'odd' %}">
-                    <td class="index">
-                        {{ forloop.counter0|add:content.offset }}.
-                    </td>
+<div id="container-content">
+    
+    {% include "artist_PAGE_NAV.html" %}
 
-                    <td>
-                        {% if item.name %}
-                            <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
-                        {% else %}
-                            <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
-                            {% if show_by_artist %}
-                                by {{ item.artist_name }}
-                            {% endif %}
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <hr>
+
+    {% include "content_CONTAINER.html" %}
+
 </div><!--END content -->
 
+{% include "general_JS_LINKS.html" %}
 
-<script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.loader.js"></script>
-<script src="{{ STATIC_URL }}js/utils.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.debug.js"></script>
-
-{% if debug %}
-    <script type="text/javascript">
-        $('a#debug').click( function() { 
-            debug_template(); 
-            return false; 
-        });
-
-        $('a#clear').click( function() { 
-            remove_resource("{{ resource_id }}"); 
-            return false; 
-        });
-    </script>
-{% endif %}
-
-{% for pending in pending_content %}
-    <script type="text/javascript">
-        var opts = {
-            'resource_id': "{{ resource_id|safe }}",
-            'resource_name': "{{ resource_name }}",
-            'content_key': "{{ pending }}",
-            'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
-            'page': "{{ page }}",
-            'item_count': "{{ item_count }}"
-        };
-
-        setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
-    </script>
-{% endfor %}
+{% include "static_AJAX_OPTS.html" %}
+{% include "static_AJAX_DEBUG.html" %}
 
 </body>
 </html>
