--- a/templates/song-content.html
+++ b/templates/song-content.html
@@ -3,212 +3,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!--Google analytics-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-51583732-1', 'audiosearch.net');
-      ga('send', 'pageview');
-
-    </script><!--END analytics-->
-
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-   
-    <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/nav.css" rel="stylesheet">
-   
-    <title>audiosearch</title>
+    {% include "general_HTML_HEAD.html" %}
 </head>
+
 <body>
 
-<!-- nav -->
-<div id="nav">
-   <span class="zone glyphicon glyphicon-th-large"></span>
+{% include "general_HEADER.html" %}
 
-    <div class="zone search">
-        <form action="/search/" method="GET">
-            <input class="search-bar" type="text" name="q">
-        </form>
-    </div>
-
-    {% if debug %}
-
-    <div class="debug">
-        <div class="zone normal">
-            <a href="" id="debug">
-                <span class="link"></span>debug
-            </a>
-        </div>
-    </div>
-
-    <div class="debug">
-        <div class="zone normal">
-            <a href="" id="clear">
-                <span class="link"></span>clear
-            </a>
-        </div>
-    </div>
-
-    {% endif %}
+<!-- content -->
+<div id="container-content">
     
-</div><!--END nav -->
-
-
-<!-- dir -->
-<div class="dir content">
-    <span class="title">
-        song / 
-
-        <a href="/music/{{ artist_name|space_to_plus }}/{{ resource_name|space_to_plus }}">
-            {{ resource_name }} 
-        </a>
-
-        <span id="profile-duration">
-            {{ profile.duration }}
-        </span>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ artist_name|space_to_plus }}/{{ resource_name|space_to_plus }}/recommended/">
-            Recommended Artists
-        </a>
-    </span>
-
-    <span class="button">
-        <a href="/music/{{ artist_name|space_to_plus }}/{{ resource_name|space_to_plus }}/similar/">
-            Similar Songs
-        </a>
-    </span>
-
-</div><!--END dir -->
-
-<!-- song info -->
-<div class="song-info content">
-    by <a href="/music/{{ artist_name|space_to_plus }}/">
-        {{ artist_name }}
-    </a>
+    {% include "song_PAGE_NAV.html" %}
 
     <hr>
 
-    <div id="profile-danceability">
-        danceability : 
+    <h4 class="center">
+        by <a href="/music/{{ artist_name|space_to_plus }}/">{{ artist_name }}</a>
+    </h4>
 
-        {% if profile.danceability %}
-            {{ profile.danceability }}
-        {% endif %}
-    </div>
+    {% include "content_CONTAINER.html" %}
 
-    <div id="profile-liveness">
-        liveness : 
-
-        {% if profile.liveness %}
-            {{ profile.liveness }}
-        {% endif %}
-    </div>
-
-    <div id="profile-tempo">
-        tempo : 
-        
-        {% if profile.tempo %}
-            {{ profile.tempo }}
-        {% endif %}
-    </div>
-    
-</div><!--END song info -->
-
-<hr>
-
-<!-- table nav -->
-<div class="table-nav content">
-    <div class="title">
-        {{ description }}
-    </div>
-
-    <div id="next">
-        {% if content.next %}
-            <a href = "?page={{ content.next }}" >next</a>
-        {% endif %}
-    </div>
-
-    <div id="current">
-        {% if content.next or content.previous and content.current %}
-            {{ content.current }} of {{ content.total }}
-        {% endif %}
-    </div>
-
-    <div id="previous">
-        {% if content.previous %}
-            <a href = "?page={{ content.previous }}" >previous</a>
-        {% endif %}
-    </div>
-
-</div><!--END table nav -->
-
-
-<hr>
-
-
-<!-- content -->
-<div class="content bbb">
-    <table id="content-table">
-        <tbody id="content-tbody">
-            {% for item in content.data %}
-                <tr class="{% cycle 'even' 'odd' %}">
-                    <td class="index">
-                        {{ forloop.counter0|add:content.offset }}.
-                    </td>
-                    <td>
-                        {% if item.name %}
-                            <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
-                        {% else %}
-                            <a href = "/music/{{ item.artist_name|space_to_plus }}/{{ item.title|space_to_plus }}/" >{{ item.title }}</a>
-                            by {{ item.artist_name }}
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div><!--END content -->
 
+{% include "general_JS_LINKS.html" %}
 
-<script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.loader.js"></script>
-<script src="{{ STATIC_URL }}js/utils.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.debug.js"></script>
-
-{% if debug %}
-    <script type="text/javascript">
-        $('a#debug').click( function() { 
-            debug_template(); 
-            return false; 
-        });
-
-        $('a#clear').click( function() { 
-            remove_resource("{{ resource_id }}"); 
-            return false; 
-        });
-    </script>
-{% endif %}
-
-{% for pending in pending_content %}
-    <script type="text/javascript">
-        var opts = {
-            'resource_id': "{{ resource_id|safe }}",
-            'resource_name': "{{ resource_name }}",
-            'content_key': "{{ pending }}",
-            'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
-            'page': "{{ page }}",
-            'item_count': "{{ item_count }}"
-        };
-
-        setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
-    </script>
-{% endfor %}
+{% include "static_AJAX_OPTS.html" %}
+{% include "static_AJAX_DEBUG.html" %}
 
 </body>
 </html>
