--- a/templates/top-artists.html
+++ b/templates/top-artists.html
@@ -3,125 +3,42 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!--Google analytics-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-51583732-1', 'audiosearch.net');
-      ga('send', 'pageview');
-
-    </script><!--END analytics-->
-
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-   
-    <link href="{{ STATIC_URL }}css/OLDgeneral.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/OLDgrid.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/OLDnav.css" rel="stylesheet">
-   
-    <title>audiosearch</title>
+    {% include "general_HTML_HEAD.html" %}
 </head>
+
 <body>
 
-<!-- nav -->
-<div id="nav">
-   <span class="zone glyphicon glyphicon-th-large"></span>
-
-    <div class="zone search">
-        <form action="/search/" method="GET">
-            <input class="search-bar" type="text" name="q">
-        </form>
-    </div>
-
-    {% if debug %}
-
-    <div class="debug">
-        <div class="zone normal">
-            <a href="" id="debug">
-                <span class="link"></span>debug
-            </a>
-        </div>
-    </div>
-
-    <div class="debug">
-        <div class="zone normal">
-            <a href="" id="clear">
-                <span class="link"></span>clear
-            </a>
-        </div>
-    </div>
-    
-    {% endif %}
-</div><!--END nav -->
-
-
-<!-- dir -->
-<div class="dir content">
-    <span class="title">
-        top artists
-    </span>
-
-</div><!--END dir -->
-
-
-<hr>
-
+{% include "general_HEADER.html" %}
 
 <!-- content -->
-<div class="content">
-    <table id="content-table">
+<div id="container-content">
 
-        <tbody id="content-tbody">
-            {% for item in content.data %}
-                <tr class="{% cycle 'even' 'odd' %}">
-                    <td class="index">
-                        {{ forloop.counter0|add:content.offset }}.
-                    </td>
-                    <td>
-                        <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <!-- content tables -->
+    <div id="content-tables" class="content center">
+        <div class="container-table">
+            <div class="header">
+
+                <div class="left">
+                    popular artists
+                </div>
+
+            </div>
+
+            <table id="top_artists-table">
+                {% with content=top_artists spinner_id="top_artists-spinner" %}
+                    {% include "content_TBODY.html" %}
+                {% endwith %}
+            </table>
+            
+        </div>
+    </div><!--END content tables -->
+
 </div><!--END content -->
 
+{% include "general_JS_LINKS.html" %}
 
-<script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.loader.js"></script>
-<script src="{{ STATIC_URL }}js/utils.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.debug.js"></script>
-
-{% if debug %}
-    <script type="text/javascript">
-        $('a#debug').click( function() { 
-            debug_template(); 
-            return false; 
-        });
-
-        $('a#clear').click( function() { 
-            remove_resource("{{ resource_id }}"); 
-            return false; 
-        });
-    </script>
-{% endif %}
-
-{% for pending in pending_content %}
-    <script type="text/javascript">
-        var opts = {
-            'resource_id': "{{ resource_id|safe }}",
-            'resource_name': "{{ resource_name }}",
-            'content_key': "{{ pending }}",
-            'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
-            'page': "{{ page }}",
-            'item_count': "{{ item_count }}"
-        };
-
-        setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
-    </script>
-{% endfor %}
+{% include "static_AJAX_OPTS.html" %}
+{% include "static_AJAX_DEBUG.html" %}
 
 </body>
 </html>
